added text, added supplementary figures

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,23 @@ joinedAF.csv
 JoinedFrequency.txt
 
 Rejected_Manhattan.R
+
+79095789.txt
+
+Significant6SNPs.txt
+
+ManhattanPlot (Autosaved).R
+
+legacy.blg
+
+legacy.bbl
+
+.Rapp.history
+
+33264017.dev.txt
+
+31384880.txt
+
+33264017.txt
+
+legacy.bbl
