updated R plotting scripts with more comments

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,18 @@ legacy.bbl
 33264017.txt
 
 legacy.bbl
+
+*.frq
+
+./sig/*
+
+
+*.csv
+
+*.txt
+
+Significant6SNPs_adjusted_published.rsID
+
+*.pos
+
+*.rsID
