--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ Significant6SNPs_adjusted_published.rsID
 *.pos
 
 *.rsID
+
+Misc/CompareGwasNormINT (Autosaved).R
+
+Misc/Plot_Pubs.format.R
+
+Misc/CompareGwasNormINT (Autosaved).R
