--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,11 @@ Misc/CompareGwasNormINT (Autosaved).R
 *.zip
 
 *.bed
+
+sig/OLD/GenomeWide_sig0.01.vcf.gz
+
+sig/OLD/GenomeWide_sig0.01.vcf.gz.tbi
+
+sig/GenomeWide_sig0.01.vcf.gz
+
+sig/GenomeWide_sig0.01.vcf.gz.tbi
