QE draft outline

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,33 @@ sig/GenomeWide_sig0.01.vcf.gz
 sig/GenomeWide_sig0.01.vcf.gz.tbi
 
 *.gz
+
+QE/Misc/Appendices/AppendixA.aux
+
+QE/Misc/Appendices/AppendixA.tex
+
+QE/Misc/Appendices/AppendixTemplate.tex
+
+QE/Misc/Chapters/Chapter1.aux
+
+QE/Misc/Chapters/Chapter1.tex
+
+QE/Misc/Chapters/ChapterTemplate.tex
+
+QE/Misc/Figures/Electron.pdf
+
+QE/thesis_1/main.aux
+
+QE/thesis_1/main.lof
+
+QE/thesis_1/main.lot
+
+QE/thesis_1/main.out
+
+QE/thesis_1/main.pdf
+
+QE/thesis_1/main.run.xml
+
+QE/thesis_1/main.toc
+
+QE/thesis_1/main-blx.bib
