Mutation rate section

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,9 @@ QE/thesis_1/main.toc
 QE/thesis_1/main-blx.bib
 QE/thesis_1/main.blg
 QE/thesis_1/main.bbl
+
+*.blg
+
+QE/thesis_1/main.bbl
+
+QE/thesis_1/main.blg
