Filled in the Intro

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,8 @@ QE/thesis_1/main.bbl
 QE/thesis_1/main.bbl
 
 QE/thesis_1/main.blg
+QE/thesis_1/main.blg
+QE/thesis_1/main.bbl
+*.bbl
+*.blg
+QE/thesis_1/main.bbl
