--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,11 @@ rick/.Rhistory
 rick/.RData
 
 PlottingScripts/HapMap+GnomAD (Autosaved).R
+
+rick/DataLists/*
+
+rick/data_list.temp
+
+*.R
+
+rick/data_list.temp
